--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                       Ness-GO merupakan jasa layanan transportasi yang
                       beroperasi disekitar unnes. Jasa yang ditawarkan meliputi
                       Jasa antar jemput, jasa titip makanan, dan jasa antar
-                      barang. Ness-GO dikelola oleh seorang mahasiswa unnes dan
-                      saat ini memiliki 2 driver utama. Kontak driver ness go hanya terdapat dalam website ini dan fee layanan sudah tertera dan dijelaskan di website ini.
+                      barang. Ness-GO dikelola oleh seorang mahasiswa unnes. Kontak driver ness go hanya terdapat dalam website ini dan fee layanan sudah tertera dan dijelaskan di website ini.
                     </p>
                   </div>
                   <div class="modal-footer">
@@ -112,14 +111,14 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="https://wa.link/zqyyup"
+                  <a class="dropdown-item" href="#"
                     >WA Driver 2</a
                   >
                 </li>
                 <li>
                   <a
                     class="dropdown-item"
-                    href="https://msng.link/o/?082220681016=tg"
+                    href="#"
                     >Telegram</a
                   >
                 </li>
@@ -221,7 +220,7 @@
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <p>Di sekitar Unnes, kami antar ke semua fakultas. 5K</p>
+                <p>Di sekitar Unnes, kami antar ke semua fakultas. 6K</p>
                 <span>Bisa juga anter ke semarang bawah.</span>
             </div>
           </div>
@@ -237,9 +236,9 @@
                 <p>Jastip sekitar unnes, fee (Berlaku di 1 tempat.):</p>
                 <span>
                   <ul>
-                    <li>1 item = 3k</li>
-                    <li>2 item = 5k</li>
-                    <li>>2 item = 2k/item</li>
+                    <li>1 item = 4k</li>
+                    <li>2 item = 7k</li>
+                    <li>>2 item = 3k/item</li>
                   </ul>
                 </span>
             </div>
